<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OnStar 24</string>
    <string name="welcome">Welcome to OnStar 24!</string>
    <string name="action_settings">Settings</string>
    <!--Text for Buttons in activity_main_in-->
    <string name="top_left_button">Personal</string>
    <string name="top_right_button">Health</string>
    <string name="middle_left_button">Home</string>
    <string name="middle_right_button">Business</string>
    <string name="bottom_left_button">Help!</string>
    <string name="bottom_right_button">Adviser</string>
    <string name="dash">Back to Dash</string>
    <!--Text for Buttons in personal-->
    <string name="voice_record_label">Voice Record</string>
    <string name="video_label">Video Record</string>
    <string name="record_front_button">Front</string>
    <string name="record_self_button">Self</string>
    <string name="record_frontback_button">Both</string>
    <string name="record_voice_button">Voice</string>
    <string name="start_recording_button">Start Recording</string>
    <!--Text for Buttons in home/business-->
    <string name="set_alarm_button">Set Alarm</string>
    <string name="disable_alarm_button">Disable Alarm</string>
    <string name="panic_button">Panic</string>
    <string name="speak_to_advisor_button">Adviser</string>
    <!--Text for Buttons in health-->
    <string name="health_provider">Health Provider</string>
    <string name="health_records">Health Records</string>
    <string name="health_advisor">Speak to Advisor</string>
    <!--Text for Buttons in adviser-->
    <string name="help_button">Help</string>
    <string name="concierge_service_button">Concierge Service</string>
    <!--Text for Buttons in cradle-->
    <string name="onstar_cradle">OnStar Cradle</string>
    <string name="xm_radio">XM Radio</string>
    <string name="emergency_cradle">Emergency</string>
    <!--Text for Buttons in menu-->
    <string name="logout_item">Log out</string>
    <string name="view_cradle_item">View Cradle</string>
</resources>
