<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/onstar_background"
    android:textAlignment="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/top_left_button"
        android:textSize="30sp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/screenLabel"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical|top">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/voice_record_label"
                android:textSize="24sp"
                android:id="@+id/editText2"
                android:textColor="#ffffffff"
                android:textStyle="bold|italic"
                android:layout_margin="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_voice_button"
                android:id="@+id/record_voice_button"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/video_label"
                android:textSize="24sp"
                android:id="@+id/editText3"
                android:textColor="#ffffffff"
                android:layout_gravity="center"
                android:textStyle="bold|italic"
                android:layout_margin="10dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_front_button"
                android:id="@+id/record_front_button"
                android:textSize="18sp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_self_button"
                android:id="@+id/record_self_button"
                android:textSize="18sp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_frontback_button"
                android:id="@+id/record_frontback_button"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_recording_button"
        android:id="@+id/start_recording_button"
        android:gravity="center|center_vertical"
        android:layout_margin="30dp"
        android:textSize="24dp"
        android:textStyle="bold" />

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
        android:gravity="bottom|left">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dash"
        android:id="@+id/goto_dash"
        android:onClick="button_goto_dash" />

</LinearLayout>

</LinearLayout>
