<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/onstar_background"
    android:textAlignment="center"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">
            android:orientation="horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_left_button"
                android:id="@+id/top_left_button"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_right_button"
                android:id="@+id/top_right_button"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="26sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_left_button"
            android:id="@+id/bottom_left_button"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textStyle="bold|italic" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_right_button"
            android:id="@+id/bottom_right_button"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="26sp"
            android:textStyle="bold|italic"
            android:onClick="button_goto_concierge_service"/>
    </LinearLayout>

</LinearLayout>
