<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/onstar_background"
    android:textAlignment="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/onstar_cradle"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="30sp"
        android:id="@+id/editText"
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Auto OnStar Service"
            android:id="@+id/auto_onstar_service_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/xm_radio"
            android:id="@+id/xm_radio_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_cradle"
            android:id="@+id/emergency_cradle_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom|left">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dash"
            android:id="@+id/goto_dash"
            android:onClick="button_goto_dash" />

    </LinearLayout>

</LinearLayout>
